fixed buggy height creating/taking extra space at the bottom of component

--- a/src/app.scss
+++ b/src/app.scss
@@ -7,6 +7,8 @@
 #root,
 #app {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 // marking for reference
@@ -29,15 +31,15 @@
 }
 
 .half-width {
-  width: 50%;
+  width: 50vw;
 }
 
 .quarter-width {
-  width: 25%;
+  width: 25vw;
 }
 
 .full-width {
-  width: 100%;
+  width: 100vw;
 }
 
 // for header component
@@ -49,16 +51,15 @@
 // for body component
 .order-body {
   display: flex;
-  flex: 1 0 auto;
+  flex: 2 0 auto;
   flex-direction: column;
-  height: 100%;
 
   .order-body-main {
     display: flex;
-    flex: 1 0 auto;
+    flex: 2 0 auto;
 
     .order-body-part {
-      flex: 1 0 auto;
+      flex: 2 0 auto;
     }
   }
 }
